--- a/MonTrash_OneForAll/src/montrash_oneforall/view/formPengguna.form
+++ b/MonTrash_OneForAll/src/montrash_oneforall/view/formPengguna.form
@@ -426,6 +426,10 @@
                                   <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               </Group>
+                              <Group type="102" alignment="1" attributes="0">
+                                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                  <Component id="btExportToPDF" min="-2" pref="115" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
@@ -437,7 +441,9 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="jLabel5" min="-2" pref="26" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jScrollPane2" pref="472" max="32767" attributes="0"/>
+                          <Component id="jScrollPane2" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="btExportToPDF" pref="39" max="32767" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -487,6 +493,9 @@
                             </Column>
                           </TableColumnModel>
                         </Property>
+                        <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+                          <Color id="Hand Cursor"/>
+                        </Property>
                         <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
                           <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                         </Property>
@@ -501,6 +510,14 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;h3&gt;Histori Pembayaran Bulanan&lt;/h3&gt;&lt;/html&gt;"/>
                   </Properties>
+                </Component>
+                <Component class="javax.swing.JButton" name="btExportToPDF">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Jadikan PDF"/>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btExportToPDFActionPerformed"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
