--- a/MonTrash_OneForAll/src/montrash_oneforall/view/formAdmin.form
+++ b/MonTrash_OneForAll/src/montrash_oneforall/view/formAdmin.form
@@ -518,7 +518,6 @@
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="btUpdateTransaksi" min="-2" pref="42" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" attributes="0">
                                   <Group type="103" groupAlignment="3" attributes="0">
@@ -547,7 +546,7 @@
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="btUpdateAngkut" min="-2" pref="42" max="-2" attributes="0"/>
-                          <EmptySpace pref="51" max="32767" attributes="0"/>
+                          <EmptySpace pref="57" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -803,6 +802,9 @@
                     </Property>
                     <Property name="text" type="java.lang.String" value="+"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tambahDataPengangkutanActionPerformed"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
